--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <li class="hideOnMobile"><a href="#">Technical Articles</a></li>
         <li class="hideOnMobile"><a href="#">My Story</a></li>
         <li class="hideOnMobile"><a href="#">Resume</a></li>
-        <li class="menu-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000" class="hamBurger"><path d="M160-360v-80h640v80H160Zm0-160v-80h640v80H160Z"/></svg></a></li>
+        <li class="menu-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000" id="hamBurger"><path d="M160-360v-80h640v80H160Zm0-160v-80h640v80H160Z"/></svg></a></li>
         <img src="Images/black-moon.png" alt="moon" width="20px" height="20px" id="icon" class="hideOnMobile">
     </ul>
     
@@ -67,6 +67,9 @@
     </p>
     <hr class="horiZontal">
     <button class="secondButton">Read Full Case Study <svg xmlns="http://www.w3.org/2000/svg" height="22px" viewBox="0 -960 960 960" class="svigs" width="20px" fill="#00000"><path d="m700-300-57-56 84-84H120v-80h607l-83-84 57-56 179 180-180 180Z"/></svg> </button>
+    <div class="exploreImage2">
+        <img src="Images/Mobile phone.png" alt="mobile phones" width="350px" height="350px">
+    </div>
 </div>
 
 </div>
