--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <nav>
         <ul class="sidebar">
             <li onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#000000"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>   
-            <li><a href="">Projects</a></li>
+            <li><a href="project-page.html">Projects</a></li>
             <li><a href="">Technical Articles</a></li>
             <li><a href="">My Story</a></li>
             <li><a href="#">Resume</a></li>
             
         </ul>
         <ul class="horizMenuBar">
-        <li><a href="" class="Logo"><span class="logo">Abdulkadiri</span>.Sumaila</a></li>   
-        <li class="hideOnMobile"><a href="#">Projects</a></li>
+        <li><a href="index.html" class="Logo"><span class="logo">Abdulkadiri</span>.Sumaila</a></li>   
+        <li class="hideOnMobile"><a href="project-page.html">Projects</a></li>
         <li class="hideOnMobile"><a href="#">Technical Articles</a></li>
         <li class="hideOnMobile"><a href="#">My Story</a></li>
         <li class="hideOnMobile"><a href="#">Resume</a></li>
