--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div class="mainBody">
     <h1 class="mainHeading">Bridging the <span class="gap">gap</span> between people and technology with design</h1>
     <p class="underText">Product Designer, UX Researcher and Web Accessibility Analyst based in Tallinn, Estonia.</p>
-    <button class="mainButton">View Projects <svg xmlns="http://www.w3.org/2000/svg" height="22px" viewBox="0 -960 960 960" class="svig" width="20px" fill="#00000"><path d="m700-300-57-56 84-84H120v-80h607l-83-84 57-56 179 180-180 180Z"/></svg> </button>
+    <a href="project-page.html"><button class="mainButton">View Projects <svg xmlns="http://www.w3.org/2000/svg" height="22px" viewBox="0 -960 960 960" class="svig" width="20px" fill="#00000"><path d="m700-300-57-56 84-84H120v-80h607l-83-84 57-56 179 180-180 180Z"/></svg> </button></a>
 </div>
 
 <div class="imageSection">
@@ -66,7 +66,7 @@
         in the development of Cars24 Mobile App.
     </p>
     <hr class="horiZontal">
-    <button class="secondButton">Read Full Case Study <svg xmlns="http://www.w3.org/2000/svg" height="22px" viewBox="0 -960 960 960" class="svigs" width="20px" fill="#00000"><path d="m700-300-57-56 84-84H120v-80h607l-83-84 57-56 179 180-180 180Z"/></svg> </button>
+    <a href="first-project.html"><button class="secondButton">Read Full Case Study <svg xmlns="http://www.w3.org/2000/svg" height="22px" viewBox="0 -960 960 960" class="svigs" width="20px" fill="#00000"><path d="m700-300-57-56 84-84H120v-80h607l-83-84 57-56 179 180-180 180Z"/></svg> </button></a>
     <div class="exploreImage2">
         <img src="Images/Mobile phone.png" alt="mobile phones" width="350px" height="350px">
     </div>
@@ -79,7 +79,7 @@
     <h2>Don't be a stranger, let's connect like Wi-Fi</h2>
     <p class="connectParag">Shoot me an email at sumaila.abdulkadiri@yahoo.com or Download my <span>Resume</span>
       for more information.    </p>
-    <button class="thirdButton">Find me on LinkedIn <svg xmlns="http://www.w3.org/2000/svg" height="22px" viewBox="0 -960 960 960" class="svigs" width="20px" fill="#00000"><path d="m700-300-57-56 84-84H120v-80h607l-83-84 57-56 179 180-180 180Z"/></svg> </button>
+    <a href="#"><button class="thirdButton">Find me on LinkedIn <svg xmlns="http://www.w3.org/2000/svg" height="22px" viewBox="0 -960 960 960" class="svigs" width="20px" fill="#00000"><path d="m700-300-57-56 84-84H120v-80h607l-83-84 57-56 179 180-180 180Z"/></svg> </button></a>
 </div>
 
 </div>
