--- a/project-page.html
+++ b/project-page.html
@@ -42,7 +42,7 @@
 
 
 <div class="projectImages">
-    <div class="card"><a href="#"><img src="Images/First Project.png" alt="Project Image" width="500px" height="500px" class="imagescard"></a></div>
+    <div class="card"><a href="first-project.html"><img src="Images/First Project.png" alt="Project Image" width="500px" height="500px" class="imagescard"> </a></div>
     <div class="card"><a href="#"><img src="Images/Second Project.png" alt="Project Image" width="500px" height="500px" class="imagescard"></a></div>
     <div class="card"><a href="#"><img src="Images/Third Project.png" alt="Project Image" width="500px" height="500px" class="imagescard"></a></div>
     <div class="card"><a href="#"><img src="Images/Fourth Project.png" alt="Project Image" width="500px" height="500px" class="imagescard"></a></div>
