--- a/first-project.html
+++ b/first-project.html
@@ -134,7 +134,7 @@
 
 <div class="phoneImage">
     <img src="Images/Mobile phone.png" alt="phones" width="700px" class="device">
-    <button class="thirdButton">Find me on LinkedIn <svg xmlns="http://www.w3.org/2000/svg" height="22px" viewBox="0 -960 960 960" class="svigs" width="20px" fill="#00000"><path d="m700-300-57-56 84-84H120v-80h607l-83-84 57-56 179 180-180 180Z"/></svg> </button>
+   <a href="#"> <button class="fourthButton">View Figma Prototype <svg xmlns="http://www.w3.org/2000/svg" height="22px" viewBox="0 -960 960 960" class="svigs" width="20px" fill="#00000"><path d="m700-300-57-56 84-84H120v-80h607l-83-84 57-56 179 180-180 180Z"/></svg> </button></a>
 </div>
 
 
